--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,11 +8,11 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.12"
-gradio = "^5.0.2"
 streamlit = "^1.39.0"
 langchain-ollama = "^0.2.0"
 scikit-learn = "^1.5.2"
 gitpython = "^3.1.43"
+langchain = "^0.3.3"
 
 
 [build-system]
