fix build problem

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -18,7 +18,7 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
         
       - name: Set up Python 3.10
         uses: actions/setup-python@v3
@@ -46,4 +46,4 @@ jobs:
 
       - name: Run CodeRECAP
         run: |
-          streamlit run project/main.py
+          streamlit run project/main.py --server.headless true  # Ensure it runs headlessly
