--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -27,13 +27,13 @@ jobs:
           
       - name: Install dependencies
         run: |
-          #python -m pip install --upgrade pip
-          #pip install flake8 pytest
-          #if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-          pip install poetry
-          poetry install
+            #python -m pip install --upgrade pip
+            #pip install flake8 pytest
+            #if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+            pip install poetry
+            poetry install
           
-      - #name: Lint with flake8
+      #- name: Lint with flake8
         #run: |
           # Stop the build if there are Python syntax errors or undefined names
         #  flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
