--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -5,9 +5,9 @@ name: Python application
 
 on:
   push:
-    branches: [ $default-branch ]
+    branches: [ workflow ]
   pull_request:
-    branches: [ $default-branch ]
+    branches: [ workflow]
 
 permissions:
   contents: read
