--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,7 +1,11 @@
 name: Python package
 
-on: [push]
-
+on: 
+    push:
+      branches: [ workflows ]
+    pull_request:
+      branches: [ workflows ]
+  
 jobs:
   build:
 
@@ -19,3 +23,14 @@ jobs:
       # You can test your matrix by printing the current Python version
       - name: Display Python version
         run: python -c "import sys; print(sys.version)"
+
+      - name: Install dependencies
+        run: |
+            python -m pip install --upgrade pip
+            pip install -r requirements.txt
+            poetry install
+      - name: Test with pytest
+        run: |
+            streamlit run project/main.py
+            pip install pytest pytest-cov
+            pytest tests.py --doctest-modules --junitxml=junit/test-results.xml --cov=com --cov-report=xml --cov-report=html
