--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -26,11 +26,13 @@ jobs:
 
       - name: Install dependencies
         run: |
-            python -m pip install --upgrade pip
+            
             pip install -r requirements.txt
             poetry install
       - name: Test with pytest
         run: |
             streamlit run project/main.py
-            pip install pytest pytest-cov
-            pytest tests.py --doctest-modules --junitxml=junit/test-results.xml --cov=com --cov-report=xml --cov-report=html
+            
+#python -m pip install --upgrade pip
+#pip install pytest pytest-cov
+#            pytest tests.py --doctest-modules --junitxml=junit/test-results.xml --cov=com --cov-report=xml --cov-report=html
