--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["pypy3.10", "3.9", "3.12", "3.13"]
+        python-version: ["pypy3.10", "3.9", "3.10", "3.11", "3.12", "3.13"]
 
     steps:
       - uses: actions/checkout@v4
@@ -29,9 +29,9 @@ jobs:
             
             pip install -r requirements.txt
             poetry install
-      - name: Test with pytest
-        run: |
-            streamlit run project/main.py
+     # - name: Test with pytest
+     #   run: |
+     #       streamlit run project/main.py
             
 #python -m pip install --upgrade pip
 #pip install pytest pytest-cov
