--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,38 +1,22 @@
 name: Python package
 
-on: 
-    push:
-      branches: [ workflow ]
-    pull_request:
-      branches: [ workflow ]
-  
+on: [push]
+
 jobs:
   build:
 
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: ["pypy3.10", "3.9", "3.8"]
 
     steps:
       - uses: actions/checkout@v4
-      - name: Set up Python ${{ matrix.python-version }}
+      - name: Set up Python
+        # This is the version of the action for setting up Python, not the Python version.
         uses: actions/setup-python@v5
         with:
-          python-version: ${{ matrix.python-version }}
+          # Semantic version range syntax or exact version of a Python version
+          python-version: '3.x'
+          # Optional - x64 or x86 architecture, defaults to x64
+          #architecture: 'x64'
       # You can test your matrix by printing the current Python version
       - name: Display Python version
         run: python -c "import sys; print(sys.version)"
-
-      - name: Install dependencies
-        run: |
-            
-            pip install -r requirements.txt
-            poetry install
-     # - name: Test with pytest
-     #   run: |
-     #       streamlit run project/main.py
-            
-#python -m pip install --upgrade pip
-#pip install pytest pytest-cov
-#            pytest tests.py --doctest-modules --junitxml=junit/test-results.xml --cov=com --cov-report=xml --cov-report=html
