--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -24,7 +24,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          poetry install
+          pip install poetry
       - name: Test with pytest
         run: |
             streamlit run project/main.py
