--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -27,6 +27,6 @@ jobs:
           pip install poetry
       - name: Test with pytest
         run: |
-            streamlit run project/main.py
+            #streamlit run project/main.py
             pip install pytest pytest-cov
             pytest tests/test.py --doctest-modules --junitxml=junit/test-results.xml --cov=com --cov-report=xml --cov-report=html
