add format checking

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -9,6 +9,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+      - uses: creyD/action_autopep8@v3.1
       - name: Set up Python
         # This is the version of the action for setting up Python, not the Python version.
         uses: actions/setup-python@v5
@@ -24,7 +25,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install poetry
+          
       - name: Test with pytest
         run: |
             #streamlit run project/main.py
