--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,9 @@ langchain-ollama = "^0.2.0"
 scikit-learn = "^1.5.2"
 gitpython = "^3.1.43"
 langchain = "^0.3.3"
-
+transformers = "^4.44.2" 
+torch = "^2.4.0"
+faiss-cpu = "^1.9.0"
 
 [build-system]
 requires = ["poetry-core"]
