--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ langchain = "^0.3.3"
 transformers = "^4.44.2" 
 torch = "^2.4.0"
 faiss-cpu = "^1.9.0"
+azure-ai = "^1.0.0"
 
 [build-system]
 requires = ["poetry-core"]
