--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,14 +5,15 @@ description = "Repository Context Aware Source Code Summarization"
 authors = ["Kanv Khare <kkhare@ncsu.edu>, Adithya Kiran <akiran2@ncsu.edu>, Sogolsadat Mansouri <smansou2@ncsu.edu>, Ziad Hassan <zmohame2@ncsu.edu>"]
 license = "MIT License"
 readme = "README.md"
+package-mode = false
 
 [tool.poetry.dependencies]
-python = "^3.12"
-streamlit = "^1.39.0"
-langchain-ollama = "^0.2.0"
-scikit-learn = "^1.5.2"
+python = "~3.10"
 gitpython = "^3.1.43"
-langchain = "^0.3.3"
+faiss-cpu = "^1.9.0"
+streamlit = "^1.39.0"
+transformers = "^4.46.1"
+torch = "^2.5.1"
 
 
 [build-system]
