--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -25,14 +25,20 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-
-      - name: Export Azure inference credential for the environment
-        run: echo "AZURE_INFERENCE_CREDENTIAL=${{ secrets.azure_inference_credentials }}" >> $GITHUB_ENV
-  
+      
+      - name: Verify Secret Access
+        run: echo "Secret is set"
+        env:
+          AZURE_INFERENCE_CREDENTIAL: ${{ secrets.AZURE_INFERENCE_CREDENTIAL }}
+        
+      
       - name: Test with pytest
         env:
          PYTHONPATH: ./project
         run: |
+            # Export the Azure credential environment variable for this step
+            export AZURE_INFERENCE_CREDENTIAL=${{ secrets.AZURE_INFERENCE_CREDENTIAL }}
+          
             #streamlit run project/main.py
             pip install pytest pytest-cov
             pytest tests/test.py --doctest-modules --junitxml=junit/test-results.xml --cov=com --cov-report=xml --cov-report=html
