--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,8 @@ transformers = "^4.44.2"
 torch = "^2.4.0"
 faiss-cpu = "^1.9.0"
 azure-core = "^1.26.0" 
-
+PyGithub = "^1.59.0"
+requests = "^2.32.3"
 
 [build-system]
 requires = ["poetry-core"]
