--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,9 +18,9 @@ langchain-huggingface = "^0.1.2"
 azure-ai-inference = "^1.0.0b5"
 transformers = "^4.46.2"
 faiss-cpu = "^1.9.0"
-pytest = "^8.3.3"
-pytest-cov = "^6.0.0"
-
+azure-core = "^1.26.0" 
+PyGithub = "^1.59.0"
+requests = "^2.32.3"
 
 [build-system]
 requires = ["poetry-core"]
