--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ faiss-cpu = "^1.9.0"
 azure-core = "^1.26.0" 
 PyGithub = "^1.59.0"
 requests = "^2.32.3"
+python-dotenv = "^1.0.1"
 
 [build-system]
 requires = ["poetry-core"]
