--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,8 @@ langchain-huggingface = "^0.1.2"
 azure-ai-inference = "^1.0.0b5"
 transformers = "^4.46.2"
 faiss-cpu = "^1.9.0"
+pytest = "^8.3.3"
+pytest-cov = "^6.0.0"
 
 
 [build-system]
