--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,10 +13,13 @@ langchain-ollama = "^0.2.0"
 scikit-learn = "^1.5.2"
 gitpython = "^3.1.43"
 langchain = "^0.3.3"
-transformers = "^4.44.2" 
-torch = "^2.4.0"
+langchain-community = "^0.3.5"
+langchain-huggingface = "^0.1.2"
+azure-ai-inference = "^1.0.0b5"
+transformers = "^4.46.2"
 faiss-cpu = "^1.9.0"
-azure-core = "^1.26.0" 
+pytest = "^8.3.3"
+pytest-cov = "^6.0.0"
 
 
 [build-system]
