--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ transformers = "^4.46.2"
 faiss-cpu = "^1.9.0"
 pytest = "^8.3.3"
 pytest-cov = "^6.0.0"
+python-dotenv = "^1.0.1"
 
 
 [build-system]
