working on swe bench

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,9 @@ PyGithub = "^1.59.0"
 requests = "^2.32.3"
 python-dotenv = "^1.0.1"
 
+[tool.poetry.group.dev.dependencies]
+ipykernel = "^6.29.5"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
