--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,9 +2,12 @@
 name = "coderecap"
 version = "0.1.0"
 description = "Repository Context Aware Source Code Summarization"
-authors = ["Kanv Khare <kkhare@ncsu.edu>, Adithya Kiran <akiran2@ncsu.edu>, Sogolsadat Mansouri <smansou2@ncsu.edu>, Ziad Hassan <zmohame2@ncsu.edu>"]
+authors = [
+    "Kanv Khare <kkhare@ncsu.edu>, Adithya Kiran <akiran2@ncsu.edu>, Sogolsadat Mansouri <smansou2@ncsu.edu>, Ziad Hassan <zmohame2@ncsu.edu>",
+]
 license = "MIT License"
 readme = "README.md"
+package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.12"
@@ -20,6 +23,8 @@ transformers = "^4.46.2"
 faiss-cpu = "^1.9.0"
 pytest = "^8.3.3"
 pytest-cov = "^6.0.0"
+pandas = "^2.2.3"
+datasets = "^3.1.0"
 
 
 [build-system]
