--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -45,5 +45,6 @@ jobs:
       - name: Run SWE-Bench Dataset Tests
         env:
           HF_HOME: /tmp/transformers_cache  # Optional caching for Hugging Face datasets
+          PYTHONPATH: ./project 
         run: |
-          python test.py
+          python tests/test.py
