--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -16,15 +16,23 @@ jobs:
         with:
           # Semantic version range syntax or exact version of a Python version
           python-version: '3.x'
+      - name: Install Poetry
+        run: |
+            curl -sSL https://install.python-poetry.org | python3 -
+            export PATH="$HOME/.local/bin:$PATH"
+  
+      - name: Install dependencies with Poetry
+        run: |
+            poetry install
           # Optional - x64 or x86 architecture, defaults to x64
           #architecture: 'x64'
       # You can test your matrix by printing the current Python version
-      - name: Display Python version
-        run: python -c "import sys; print(sys.version)"
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+      # - name: Display Python version
+      #   run: python -c "import sys; print(sys.version)"
+      # - name: Install dependencies
+      #   run: |
+      #     python -m pip install --upgrade pip
+      #     pip install -r requirements.txt
       
       - name: Verify Secret Access
         run: echo "Secret is set"
