--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -4,55 +4,47 @@ on: [push]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v4
       - uses: creyD/action_autopep8@v3.1
+      
       - name: Set up Python
-        # This is the version of the action for setting up Python, not the Python version.
         uses: actions/setup-python@v5
         with:
-          # Semantic version range syntax or exact version of a Python version
           python-version: '3.x'
+          
       - name: Install Poetry
         run: |
-            curl -sSL https://install.python-poetry.org | python3 -
-            export PATH="$HOME/.local/bin:$PATH"
-  
+          curl -sSL https://install.python-poetry.org | python3 -
+          export PATH="$HOME/.local/bin:$PATH"
+          
       - name: Install dependencies with Poetry
         run: |
-            poetry install
-          # Optional - x64 or x86 architecture, defaults to x64
-          #architecture: 'x64'
-      # You can test your matrix by printing the current Python version
-      # - name: Display Python version
-      #   run: python -c "import sys; print(sys.version)"
-      # - name: Install dependencies
-      #   run: |
-      #     python -m pip install --upgrade pip
-      #     pip install -r requirements.txt
-      
+          poetry install
+          
+      - name: Check and Install Streamlit if Missing
+        run: |
+          if ! poetry show streamlit; then
+            poetry add streamlit
+          fi
+          
       - name: Verify Secret Access
         run: echo "Secret is set"
         env:
           AZURE_INFERENCE_CREDENTIAL: ${{ secrets.AZURE_INFERENCE_CREDENTIAL }}
         
-      
       - name: Test with pytest
         env:
-         PYTHONPATH: ./project
+          PYTHONPATH: ./project
         run: |
-            # Export the Azure credential environment variable for this step
-            export AZURE_INFERENCE_CREDENTIAL=${{ secrets.AZURE_INFERENCE_CREDENTIAL }}
-          
-            #streamlit run project/main.py
-            pip install pytest pytest-cov
-      
+          export AZURE_INFERENCE_CREDENTIAL=${{ secrets.AZURE_INFERENCE_CREDENTIAL }}
+          poetry run pytest --cov=project
+        
       - name: Run SWE-Bench Dataset Tests
         env:
           HF_HOME: /tmp/transformers_cache  # Optional caching for Hugging Face datasets
           PYTHONPATH: ./project 
         run: |
-          python tests/test.py
+          poetry run python tests/test.py
