--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -21,10 +21,20 @@ jobs:
       # You can test your matrix by printing the current Python version
       - name: Display Python version
         run: python -c "import sys; print(sys.version)"
-      - name: Install dependencies
+      - name: Install Poetry
         run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          curl -sSL https://install.python-poetry.org | python3 -
+          export PATH="$HOME/.local/bin:$PATH"
+          
+      - name: Install dependencies with Poetry
+        run: |
+          poetry install
+          
+      - name: Check and Install Streamlit if Missing
+        run: |
+          if ! poetry show streamlit; then
+            poetry add streamlit
+          fi
       
       - name: Verify Secret Access
         run: echo "Secret is set"
