--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -22,21 +22,19 @@ jobs:
       # Display the Python version (optional)
       - name: Display Python version
         run: python -c "import sys; print(sys.version)"
+
+      # Install Poetry
       - name: Install Poetry
         run: |
           curl -sSL https://install.python-poetry.org | python3 -
           export PATH="$HOME/.local/bin:$PATH"
-          
+
+      # Install dependencies with Poetry
       - name: Install dependencies with Poetry
         run: |
           poetry install
-          
-      - name: Check and Install Streamlit if Missing
-        run: |
-          if ! poetry show streamlit; then
-            poetry add streamlit
-          fi
-      
+
+      # Verify Azure Secret Access
       - name: Verify Secret Access
         run: echo "Secret is set"
         env:
@@ -48,19 +46,11 @@ jobs:
           PYTHONPATH: ./project
           AZURE_INFERENCE_CREDENTIAL: ${{ secrets.AZURE_INFERENCE_CREDENTIAL }}
         run: |
-            
-            export AZURE_INFERENCE_CREDENTIAL=${{ secrets.AZURE_INFERENCE_CREDENTIAL }}
-          
-            
-            pip install pytest pytest-cov
+          pip install pytest pytest-cov
+          poetry run pytest --cov=project
 
-            - name: Test with pytest
-            env:
-              PYTHONPATH: ./project
-            run: |
-              
-              poetry run pytest --cov=project
-      - name: Install dependencies with Poetry
+      # Install additional datasets library for SWE-Bench
+      - name: Install SWE-Bench dependencies
         run: |
           poetry add datasets
 
